tests/ui/consts/min_const_fn/min_const_fn_libstd_stability.stderr
error: `foo` is not yet stable as a const fn
  --> $DIR/min_const_fn_libstd_stability.rs:16:25
   |
LL | const fn bar() -> u32 { foo() }
   |                         ^^^^^
   |
   = help: const-stable functions can only call other const-stable functions

error: `foo2` is not yet stable as a const fn
  --> $DIR/min_const_fn_libstd_stability.rs:24:26
   |
LL | const fn bar2() -> u32 { foo2() }
   |                          ^^^^^^
   |
   = help: const-stable functions can only call other const-stable functions

error: const-stable function cannot use `#[feature(const_refs_to_cell)]`
  --> $DIR/min_const_fn_libstd_stability.rs:31:5
   |
LL |     x.get();
   |     ^
   |
help: if the function is not (yet) meant to be stable, make this function unstably const
   |
LL + #[rustc_const_unstable(feature = "...", issue = "...")]
LL | const fn bar3() -> u32 {
   |
help: otherwise, as a last resort `#[rustc_allow_const_fn_unstable]` can be used to bypass stability checks (but requires team approval)
   |
LL + #[rustc_allow_const_fn_unstable(const_refs_to_cell)]
LL | const fn bar3() -> u32 {
   |

error[E0015]: cannot call non-const fn `Cell::<u32>::get` in constant functions
  --> $DIR/min_const_fn_libstd_stability.rs:31:7
   |
LL |     x.get();
   |       ^^^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants

error: `foo` is not yet stable as a const fn
  --> $DIR/min_const_fn_libstd_stability.rs:34:5
   |
LL |     foo()
   |     ^^^^^
   |
   = help: const-stable functions can only call other const-stable functions

error: `foo2_gated` is not yet stable as a const fn
  --> $DIR/min_const_fn_libstd_stability.rs:45:32
   |
LL | const fn bar2_gated() -> u32 { foo2_gated() }
   |                                ^^^^^^^^^^^^
   |
   = help: const-stable functions can only call other const-stable functions

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0015`.
